# project_pda

./: .gitignore  Project_PDA.ipynb  README.md  kNN.csv  pyproject.toml
pda_api/: app.py  model.py  pyproject.toml
pda_api/static/: index.html  styles.css
