[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["raacee <raceldamechli@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "~1.5.3"
matplotlib = "3.7.1"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
sklearn-evaluation = "^0.12.0"
tensorflow = "^2.15.0"
seaborn = "0.12.2"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
