[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["raacee <raceldamechli@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^3.0.0"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
flask = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
